<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/echo_200"
    tools:context=".ui.activity.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="20dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_profile"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail"
        app:constraint_referenced_ids="item_1,item_2,item_3,item_4,item_5,item_6"
        app:flow_wrapMode="chain"/>

    <TextView
        android:id="@+id/item_1"
        style="@style/txt_grid"
        android:text="@string/_100"/>

    <TextView
        android:id="@+id/item_2"
        style="@style/txt_grid"
        android:text="@string/_100"/>

    <TextView
        android:id="@+id/item_3"
        style="@style/txt_grid"
        android:text="@string/_100"/>

    <TextView
        android:id="@+id/item_4"
        style="@style/txt_grid"
        android:text="@string/followers"/>

    <TextView
        android:id="@+id/item_5"
        style="@style/txt_grid"
        android:text="@string/following"/>

    <TextView
        android:id="@+id/item_6"
        style="@style/txt_grid"
        android:text="@string/repository"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/echo_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow"
        app:tabTextColor="@android:color/white"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>